# Pytho_homework_14.1

./: .flake8  READNE.md  index.html  main.py  pyproject.toml
src/: cls_category.py  cls_iter_item.py  cls_product.py  read_json.py
tests/: conftest.py  test_cls_category.py  test_cls_iter_item.py  test_cls_product.py  test_read_json.py
